# AI_Playground

./: .gitignore  README.md  ollama_intro.ipynb  pyproject.toml
notebooks/01_ollama/: ollama_intro.ipynb  system_prompts_params.ipynb
notebooks/02_huggingface/: transformers_intro.ipynb
notebooks/03_finetuning/: 01_lora_intro.ipynb  02_mlflow_tracking.ipynb  lora_intro.ipynb
notebooks/04_eval/: metrics.ipynb
notebooks/05_guardrails/: 01_intro.ipynb
utils/: classifier.py
