[project]
name = "ai-playground"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "mlflow-skinny==3.12.0",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "protobuf==4.25.3",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.7.0",
]
